Fix textarea size on mobile

--- a/styles/style.less
+++ b/styles/style.less
@@ -489,6 +489,8 @@ textarea {
     padding: @spacing-sm;
     font-size: @font-size-medium;
     min-height: @touch-target-size;
+    max-width: 100%;
+    box-sizing: border-box;
 }
 
 button {
